# zenth_front

./: .env.example  .gitignore  .gitlab-ci.yml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.scannerwork/: report-task.txt
.storybook/: main.ts  preview.tsx
docs/: 00_architecture_generale.md  01_frontend_pages.md  02_frontend_services.md  (+8 more)
src-tauri/: .taurignore  Cargo.toml  tauri  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/api/: delete.rs  errors.rs  friend.rs  login.rs  mod.rs  prekeys.rs  recovery.rs  register.rs  sync.rs  update.rs
src-tauri/src/commands/: file_commands.rs  mod.rs  share.rs  sync.rs
src-tauri/src/db/: crypto.rs  error.rs  master.rs  mod.rs  paths.rs  user.rs
src-tauri/src/db/migrations/: schema.rs
src-tauri/src/pages/: mod.rs
src-tauri/src/pages/chat/: file_transfer.rs  messages.rs  mod.rs
src-tauri/src/pages/chat/crypto/: mod.rs  sessions.rs
src-tauri/src/pages/chat/database/: encryption.rs  mod.rs  queries.rs
src-tauri/src/pages/friends/: friends.rs  mod.rs
src-tauri/src/pages/friends/database/: queries.rs
src-tauri/src/pages/keygen/: keygen.rs  mod.rs
src-tauri/src/pages/keygen/crypto/: key_gen.rs
src-tauri/src/pages/login/: login.rs
src-tauri/src/pages/recovery/: bip39.rs  mod.rs
src-tauri/src/pages/register/: mod.rs  register.rs
src-tauri/src/pages/register/crypto/: commitment.rs  key.rs  mod.rs
src-tauri/src/pages/register/database/: mod.rs
src-tauri/src/pages/settings/: mod.rs
src-tauri/src/pages/settings/database/: mod.rs
src-tauri/src/pages/settings/models/: appearance.rs  backup.rs  connection.rs  cryptography.rs  ephemeral.rs  experimental.rs  forward_secrecy.rs  identity.rs  metadata.rs  mod.rs  multidevice.rs  network.rs  notifications.rs  security.rs  storage.rs
src-tauri/src/pages/settings/operations/: get.rs  load.rs  mod.rs  reset.rs  save.rs
src-tauri/src/pages/sync/: mod.rs
src-tauri/src/pages/update/: mod.rs
src-tauri/src/pages/vault/: mod.rs
src-tauri/src/pages/wipe/: mod.rs
src-tauri/src/plugins/: keystore.rs
src-tauri/src/session/: config.rs  mod.rs
src-tauri/src/utils/: emergency.rs  mod.rs
src-tauri/src/utils/sanitizer/: parser.rs
src-tauri/src/utils/security/: cipher_key.rs  generate_var.rs  mod.rs  secure_delete.rs  securitypassword.rs
src-tauri/src/utils/timestamp/: mod.rs  plateform.rs
src-tauri/src/websocket/: mod.rs
(+108 files in other folders)
